--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,6 @@ config/settings.local.yml
 config/settings/development.yml
 config/settings/test.yml
 config/settings/production.yml
+
+# Ignore Docker environment
+docker.env
